--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.example.tfg_teleasistencia_2021">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
@@ -13,6 +16,8 @@
         android:theme="@style/Theme.TFG_Teleasistencia_2021">
         <activity android:name=".AcercaDe"></activity>
         <activity android:name=".DatosSensores"></activity>
+        <activity android:name=".VinculacionPulsera"></activity>
+        <activity android:name=".MActiv2"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,5 +26,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
